--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <h2>Mahasiswa</h2>
           <p>
             Seorang yang minat di
-            <span style="color: #fbc73e">Frontend Web Developer</span> dengan
+            <span style="color: #fbc73e">Fullstack Developer</span> dengan
             fokus pada desain web menarik dan pengalaman pengguna.
           </p>
           <button class="hubungi-saya">
@@ -169,7 +169,7 @@
 
         <div class="project-card">
           <img
-            src="img/projectS/CheckOut-Dessert.png"
+            src="img/projects/CheckOut-Dessert.png"
             alt="CheckOut-Dessert"
             class="project-image"
           />
